# startproject

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md
modules/: CLAUDE.md  README.md  status.md
modules/gd-builder/: .gitignore  .gitrepo  README.md  build.py  delete.sh  disable.sh  enable.sh  module.json  pyproject.toml
modules/gd-builder/builder/: __init__.py  cli.py  config.py  dev_server.py
modules/gd-builder/builder/commands/: __init__.py  build.py  clean.py  publish.py  run.py  setup.py  test.py  watch.py
modules/gd-builder/builder/services/: __init__.py  haxe.py  netlify.py  server.py  vite.py
modules/gd-builder/builder/utils/: logger.py  path.py  process.py
modules/gd-builder/haxe/: TestCollector.hx
modules/gd-builder/scripts/: coverage_report.py  lint.py  lint_rules.py  run_coverage.py  test_report.py
modules/gd-builder/templates/: test.hxml
modules/gd-builder/templates/profiles/: main.json
modules/gd-builder/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_haxe.py  test_logger.py  test_platforms.py  test_process.py  test_watch_manager.py
modules/gd-builder/tests/integration/: __init__.py  conftest.py  test_build.py  test_watch.py
modules/haxeheaps-starter/: .gitignore_project  .gitrepo  CLAUDE.md  README.md  delete.sh  disable.sh  enable.sh  module.json
modules/localization-audio-subtitle/: .gitrepo  CLAUDE.md  delete.sh  disable.sh  module.json
modules/localization-base/: .gitrepo  CLAUDE.md  disable.sh  enable.sh  module.json
public/: index.html
src/: CLAUDE.md  Main.hx
test/: TestMain.hx
(+243 files in other folders)
